# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  superlinter.yml
brain_games/: cli.py  engine.py  even_cli.py
brain_games/games/: calc.py  calc_cli.py  even.py  even_cli.py  gcd.py  gcd_cli.py  prime.py  prime_cli.py  prog_cli.py  progress_cli.py  progression.py
brain_games/scripts/: brain-calc.py  brain-even.py  brain-gcd.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
